[tool.poetry]
name = "ii-3"
version = "0.1.0"
description = ""
authors = ["alexeiepif <aled2093746@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
(
    __pycache__
)
'''

[tool.flake8]
max-line-length = 79
extend-exclude = '__pycache__'

[tool.isort]
skip = '__pycache__'
